tests/fixtures/guardrails/valid/app/routes/imported-service-handler-reexport.ts
import { runProductPreview } from "~/app/services/products.server";

export { runProductPreview as loader };
