tests/fixtures/guardrails/invalid/route-assigned-imported-binding-bypass/app/routes/products.ts
import { delegatedLoader } from "~/app/lib/delegated-loader";

export const loader = delegatedLoader;
